<resources>
    <string name="app_name">MoviesApp</string>
    <string name="intro_txt1">Discover Your</string>
    <string name="intro_txt2">Favorite Show</string>
    <string name="intro_txt3">Watch Now or Watch Later</string>
    <string name="intro_txt4">you can browse movies and shows by genre ,search for specific title ,or check out recommendation for you</string>
    <string name="intro_btn">Get Started</string>

    <string name="login_txt1">Log in</string>
    <string name="login_txt2">User Name</string>
    <string name="login_txt3">Password</string>
    <string name="login_txt4">Forget Your Password?</string>
    <string name="login_btn">Login</string>
    <string name="login_txt5">or</string>
    <string name="login_txt6">Register Now</string>

    <string name="register_txt1">Register</string>
    <string name="register_txt2">Password Confirmation</string>
    <string name="register_txt3">Email</string>

    <string name="main_txt1">Search Movies...</string>
    <string name="main_txt2">Best Movies</string>
    <string name="main_txt3">Category</string>
    <string name="main_txt4">Movies</string>
    <string name="main_txt5">See All</string>

    <string name="menu_txt1">Explore</string>
    <string name="menu_txt2">Favorite</string>
    <string name="menu_txt3">Profile</string>
    <string name="menu_txt4">Setting</string>

    <string name="item_ly2_txt">Film</string>

    <string name="detail_txt1">Summary</string>
    <string name="detail_txt2">Actors</string>
    <string name="detail_txt3">Director</string>
    <string name="detail_txt4">Writer</string>
    <string name="detail_txt5">Plot</string>
    <string name="detail_txt6">Country</string>
    <string name="detail_txt7">Awards</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>