<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="130dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_txt1"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/grey"
                app:hintTextColor="@color/orange"
                app:cursorColor="@color/white"
                app:boxStrokeColor="@color/grey"
                app:boxStrokeWidth="2dp"
                android:hint="@string/login_txt2"
                android:layout_marginTop="25dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:lines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/grey"
                app:boxStrokeColor="@color/grey"
                app:hintTextColor="@color/orange"
                app:cursorColor="@color/white"
                android:hint="@string/login_txt3"
                app:boxStrokeWidth="2dp"
                android:layout_marginTop="15dp"
                android:padding="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:imeOptions="actionSearch"
                    android:textColorHint="@color/grey"
                    android:inputType="text"

                    android:layout_height="wrap_content"
                    android:lines="1">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_txt4"
                android:textColor="@color/white"
                android:layout_marginTop="10dp">
            </TextView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="12dp"
                app:strokeColor="@color/orange"
                android:clickable="true"
                android:backgroundTint="@color/orange"
                app:cardElevation="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/login_btn"
                    android:textSize="15sp">

                </TextView>
            </com.google.android.material.card.MaterialCardView>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/grey">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/white"
                    android:text="@string/login_txt5"
                    android:textSize="15sp">

                </TextView>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/grey">
                </View>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_txt6"
                android:textColor="@color/white"
                android:layout_marginTop="20dp">
            </TextView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>